<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="huafeng.me.myswitch.SettingActivity">

    <Button
        android:id="@+id/button_aggressive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_aggressive"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_bachelor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/button_spouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_spouse"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/button_avoider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_avoider"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_spouse"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/button_bachelor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_bachelor"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_teamwork"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/button_parent"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:text="@string/str_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_aggressive"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/button_logic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_logic"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_security"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_logic" />

    <Button
        android:id="@+id/button_teamwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_teamwork"
        app:layout_constraintTop_toBottomOf="@+id/button_security"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/image_setting"
        android:layout_width="220dp"
        android:layout_height="323dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pic_question"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/button_bachelor"
        android:layout_marginStart="8dp"
        tools:layout_editor_absoluteX="148dp" />

    <Button
        android:id="@+id/button_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change"
        app:layout_constraintEnd_toEndOf="@+id/image_setting"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/image_setting"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintTop_toBottomOf="@+id/textViewChange"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/image_setting"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/image_setting"
        app:layout_constraintTop_toBottomOf="@+id/image_setting" />

</android.support.constraint.ConstraintLayout>
